--- a/packages/tools/docusaurus/docs/guides/components/customize.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/customize.mdx
@@ -18,7 +18,7 @@ Additionally this can of course also be used while [creating](./create.mdx) a co
 
 As with the adaptation process, the big assumption here is that you already have a **kickstartDS** base component in mind. But unlike in that one, we have some requirement or feature in mind that is not covered by it. We _almost_ have a match.
 
-Finding your component definition is still very simplified, we just have to add those properties, not covered by the base component, ourselves.
+Finding your component definition is still very simplified, we just have to add those properties not covered by the base component into the mix ourselves.
 
 <Admonition type="tip" title="Adaptation process as a base line">
   If you've read our ["Adapt a component"](./adapt.mdx) guide you probably already know this:
@@ -27,7 +27,7 @@ This guide expects you to reduce the set of props offered by **kickstartDS** com
 
 </Admonition>
 
-If you don't have component in mind yet, you're probably better served by our guide ["Create a component"](./create.mdx). In that guide, you'll start off without a specific component in mind. This means defining a structure (someting you probably have an idea about already) first, and then mapping that structure to a fitting component second.
+If you don't have **kickstartDS** base component in mind yet, you're probably better served by our guide ["Create a component"](./create.mdx). In that guide, you'll start off without a specific component in mind. This means defining a structure (someting you probably have an idea about already) first, and then mapping that structure to a fitting component second.
 
 We also have an example for this with ["Create `Teaser Card` component"](../examples/components/teaser-card.mdx).
 
@@ -399,7 +399,7 @@ To learn more about the tooling that create those types for you, and how to hook
 
 Let's continue showcasing this process using our `Headline`, creating the component template:
 
-TODO fix formatting in first code sample here
+TODO fix formatting in code samples here
 
 <CH.Spotlight>
 <CH.Code>
@@ -450,8 +450,8 @@ return (
         )}
         <TagName
           className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
           )}
         >
           {renderContent(text)}
@@ -618,8 +618,8 @@ return (
         )}
         <TagName
           className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
           )}
         >
           {renderContent(text)}
@@ -699,8 +699,8 @@ return (
         )}
         <TagName
           className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
           )}
         >
           {renderContent(text)}
@@ -782,8 +782,89 @@ return (
         )}
         <TagName
           className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
+          )}
+        >
+          {renderContent(text)}
+        </TagName>
+        {sub && !switchOrder && (
+          <p className="c-headline__subheadline">{renderSubheadline(sub)}</p>
+        )}
+      </header>
+    </>
+  ) : (
+    ''
+  )}
+</>
+); };
+
+export const HeadlineProvider: FC<PropsWithChildren<any>> = (props) => (
+  <HeadlineContext.Provider {...props} value={Headline} />
+);
+
+````
+
+</CH.Code>
+
+---
+
+##### Add the actual **JSX**
+
+Unlike when directly adapting or extending a **kickstartDS** base component, we can't use some imported component directly. We need to reference the template of the original component we're customizing, to copy the parts that need customizing.
+
+For the `Headline` this means copying and customizing [this template](https://github.com/kickstartDS/kickstartDS/blob/master/packages/components/base/source/headline/HeadlineComponent.tsx).
+
+<CH.Code>
+```tsx src/components/headline/HeadlineComponent.tsx focus=29:62
+import classnames from "classnames";
+import { HTMLAttributes, FC, PropsWithChildren } from "react";
+
+import { HeadlineContext } from '@kickstartds/base/lib/headline';
+import { defaultRenderFn } from '@kickstartds/core/lib/core';
+
+import { HeadlineProps } from './HeadlineProps';
+
+interface RenderFunctions {
+renderContent?: typeof defaultRenderFn;
+renderSubheadline?: typeof defaultRenderFn;
+}
+
+export const Headline: FC<
+  HeadlineProps & RenderFunctions & HTMLAttributes<HTMLElement>
+> = ({
+  text,
+  sub,
+  switchOrder = false,
+  level = "h2",
+  style = "h2",
+  spaceAfter = "small",
+  renderContent = defaultRenderFn,
+  renderSubheadline = defaultRenderFn,
+  ...props
+}) => {
+  const TagName = level;
+
+return (
+
+<>
+  {text || sub ? (
+    <>
+      <header
+        className={classnames(
+          'c-headline',
+          `c-headline--align-left`,
+          spaceAfter && `c-headline--space-after-${spaceAfter}`
+        )}
+        {...props}
+      >
+        {sub && switchOrder && (
+          <p className="c-headline__subheadline">{renderSubheadline(sub)}</p>
+        )}
+        <TagName
+          className={classnames(
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
           )}
         >
           {renderContent(text)}
@@ -811,7 +892,7 @@ export const HeadlineProvider: FC<PropsWithChildren<any>> = (props) => (
 
 ##### Destructure additional props
 
-Coming to our component JSX, we start by passing down (destructuring) the `props` we're carrying through first. This ensures properties defined in our [component API](../../foundations/components/component-api.md) will always take precedence, because they're added after the general `props`.
+We start with the `props` we're carrying through first. We add those to the root `<header>` element, like in the [original component](https://github.com/kickstartDS/kickstartDS/blob/master/packages/components/base/source/headline/HeadlineComponent.tsx).
 
 <CH.Code>
 ```tsx src/components/headline/HeadlineComponent.tsx focus=40
@@ -861,8 +942,8 @@ return (
         )}
         <TagName
           className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
           )}
         >
           {renderContent(text)}
@@ -888,12 +969,15 @@ export const HeadlineProvider: FC<PropsWithChildren<any>> = (props) => (
 
 ---
 
-##### Glue component API to base component 1/3
+##### Adjustments to copied template markup 1/3
 
-The simplest cases of connecting props to the base component is when the name of the property is taken from the base component. We can just directly pass those without much thought.
+This is where we actually customize the original components markup.
+
+For the `Headline` we drop properties we don't use (e.g. `className`), add hard coded values for others required but not part of our [component API](../../foundations/components/component-api.md) (e.g. `align`) and rename the ones we've given another name to (e.g. `styleAs` vs `style`)
+
 
 <CH.Code>
-```tsx src/components/headline/HeadlineComponent.tsx
+```tsx src/components/headline/HeadlineComponent.tsx focus=30:61
 import classnames from "classnames";
 import { HTMLAttributes, FC, PropsWithChildren } from "react";
 
@@ -940,8 +1024,8 @@ return (
         )}
         <TagName
           className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
           )}
         >
           {renderContent(text)}
@@ -967,12 +1051,12 @@ export const HeadlineProvider: FC<PropsWithChildren<any>> = (props) => (
 
 ---
 
-##### Glue component API to base component 2/3
+##### Adjustments to copied template markup 2/3
 
-In some cases we might have changed the name of a prop. In that instance, we just to have to wire up the renamed property to the originally named base components property.
+The real custommization lies in adding the `subheadline` / `sub` in two places, before **and** after the main headline content. We just add matching `if` clauses using `switchOrder` and `!switchOrder` respectively, to toggle the one being displayed.
 
 <CH.Code>
-```tsx src/components/headline/HeadlineComponent.tsx
+```tsx src/components/headline/HeadlineComponent.tsx focus=42:44,53:55
 import classnames from "classnames";
 import { HTMLAttributes, FC, PropsWithChildren } from "react";
 
@@ -1019,8 +1103,8 @@ return (
         )}
         <TagName
           className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
           )}
         >
           {renderContent(text)}
@@ -1043,17 +1127,14 @@ export const HeadlineProvider: FC<PropsWithChildren<any>> = (props) => (
 ````
 
 </CH.Code>
-
 ---
 
-##### Glue component API to base component 3/3
+##### Adjustments to copied template markup 3/3
 
-Finally there might be properties where the naming of the actual values was changed, for example when adapting `enum` typed properties.
-
-We'll have to simply rewire the values in that case.
+We also ensure adding our rendering functions to headline content and subheadline.
 
 <CH.Code>
-```tsx src/components/headline/HeadlineComponent.tsx
+```tsx src/components/headline/HeadlineComponent.tsx focus=43,51,54
 import classnames from "classnames";
 import { HTMLAttributes, FC, PropsWithChildren } from "react";
 
@@ -1100,89 +1181,8 @@ return (
         )}
         <TagName
           className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
-          )}
-        >
-          {renderContent(text)}
-        </TagName>
-        {sub && !switchOrder && (
-          <p className="c-headline__subheadline">{renderSubheadline(sub)}</p>
-        )}
-      </header>
-    </>
-  ) : (
-    ''
-  )}
-</>
-); };
-
-export const HeadlineProvider: FC<PropsWithChildren<any>> = (props) => (
-  <HeadlineContext.Provider {...props} value={Headline} />
-);
-
-````
-
-</CH.Code>
-
----
-
-##### Finalize component JSX by adding the `ref`
-
-This will be optional, and depend on the element being handled. If you've included a [`forwardRef`](https://reactjs.org/docs/forwarding-refs.html) before, you'll have to pass that `ref` down to the **kickstartDS** base component.
-
-We'll have to simply rewire the values in that case.
-
-<CH.Code>
-```tsx src/components/headline/HeadlineComponent.tsx
-import classnames from "classnames";
-import { HTMLAttributes, FC, PropsWithChildren } from "react";
-
-import { HeadlineContext } from '@kickstartds/base/lib/headline';
-import { defaultRenderFn } from '@kickstartds/core/lib/core';
-
-import { HeadlineProps } from './HeadlineProps';
-
-interface RenderFunctions {
-renderContent?: typeof defaultRenderFn;
-renderSubheadline?: typeof defaultRenderFn;
-}
-
-export const Headline: FC<
-  HeadlineProps & RenderFunctions & HTMLAttributes<HTMLElement>
-> = ({
-  text,
-  sub,
-  switchOrder = false,
-  level = "h2",
-  style = "h2",
-  spaceAfter = "small",
-  renderContent = defaultRenderFn,
-  renderSubheadline = defaultRenderFn,
-  ...props
-}) => {
-  const TagName = level;
-
-return (
-
-<>
-  {text || sub ? (
-    <>
-      <header
-        className={classnames(
-          'c-headline',
-          `c-headline--align-left`,
-          spaceAfter && `c-headline--space-after-${spaceAfter}`
-        )}
-        {...props}
-      >
-        {sub && switchOrder && (
-          <p className="c-headline__subheadline">{renderSubheadline(sub)}</p>
-        )}
-        <TagName
-          className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
           )}
         >
           {renderContent(text)}
@@ -1210,10 +1210,10 @@ export const HeadlineProvider: FC<PropsWithChildren<any>> = (props) => (
 
 ##### Adding a `Provider`
 
-The final part of creating our **React** component is adding a component `Provider` for it. As we've adapted a component here, we'll want to make sure that every time another component includes the base component, our own version of it gets used instead.
+The final part of creating our **React** component is adding a component `Provider` for it. As we've adapted an existing **kickstartDS** base component here, we'll want to make sure that every time another component includes that base component, our own version of it gets used instead.
 
 <CH.Code>
-```tsx src/components/headline/HeadlineComponent.tsx
+```tsx src/components/headline/HeadlineComponent.tsx focus=64:66
 import classnames from "classnames";
 import { HTMLAttributes, FC, PropsWithChildren } from "react";
 
@@ -1260,8 +1260,8 @@ return (
         )}
         <TagName
           className={classnames(
-            'c-headline**headline',
-            style !== 'none' && style !== level && `c-headline**${style}`
+            'c-headline__headline',
+            style !== 'none' && style !== level && `c-headline__${style}`
           )}
         >
           {renderContent(text)}
@@ -1286,9 +1286,59 @@ export const HeadlineProvider: FC<PropsWithChildren<any>> = (props) => (
 </CH.Code>
 </CH.Spotlight>
 
+If you're wondering what that `Provider` we've added last is all about, think about it like this:<br/>
+There may be other components you've built, that themselves use the base `Headline` component by default. For example we might have our own `TeaserCard` component, based on the **kickstartDS** `TeaserBox` which includes a `Headline`.
+
+As a means to not having to go through every combination of those component now, making sure our customized `Headline` actually gets used, you can just change the default `Headline` rendered by adding a single `Provider` once, instead.
+
+Learn more about `Providers` and **React Context** in [our dedicated page about them](#). TODO add link.<br />
+Or look at our ["Create your Design System" guide](../../guides/create/components.mdx), where we add the general setup for `Providers`. That one also includes some more details on this!
+
+<Admonition type="tip" title="Visual Studio Code component property quick-fix">
+Visual Studio Code has a great feature aiding in this workflow, with **React** components that include **TypeScript** types... like **kickstartDS** components do. When adding a "bare" component without props to your template, Visual Studio Code will offer you the option to `Add missing attributes`.
+
+This will automatically create all required options for your component. Now you just have to connect your own props to those, while hard-coding the ones you don't plan on exposing as part of your components [component API](../../foundations/components/component-api.md).
+
+Just hover the squiggly, red line that should be decorating your component, and choose `Quick Fix...`, to get to that option (alternatively put your cursor on the component tag and hit `Ctrl+.`).
+
+TODO add short animation of this workflow
+</Admonition>
+
 ## Technical debt added
+
+This way of creating components adds a bit more technical debt than, for example, directly [adapting](./adapt.mdx) or [creating](./create.mdx) a component. Even [extending](./extend.mdx) a component can potentially carry less technical debt, if the extended component is mainly composed of unchanged **kickstartDS** base components. We still only add a small layer on top of the original **kickstartDS** base component from a [component API](../../foundations/components/component-api.md) perspective, but we **also** customize the markup.
+
+Relevant underlying changes you'll have to look out for:
+
+- changes to the base components [component API](../../foundations/components/component-api.md)
+- changes to the base components **React** template
+- removal of the base components
+
+You're immune to underlying changes to:
+
+- the design and layout (changes to **CSS**, **SCSS** and **Design &amp; Component Token**)
+
+In the case of a changed [component API](../../foundations/components/component-api.md), you should have a look at the corresponding `CHANGELOG.md` and potential notes in our matching [migration guide](../migrations/index.md). You'll probably just need to add a newly added field to your **React** template, and potentially your own [component API](../../foundations/components/component-api.md) if you want to use it. If a field was changed, that might also necessitate some adaption of your own version. Finally a removed field you're actually using would mean adding additional customization to regain that functionality. Have a look at our [`Headline` example guide](../examples/components/headline.mdx) to see how you'd add your own, new property!
+
+Changes to the markup of a components **React** component will also need to be adapted. Those will always be [Breaking Changes](../../intro/upgrading.md), though. And there'll always be a migration guide detailing the changes you'll have to follow. But it's still one crucial dependency added for you to worry about.
+
+<Admonition type="tip" title="Immunity to underlying design and layout changes">
+How immune you are to changes to design and layout of a **kickstartDS** base component can depend on the changes you've made to the component while customizing. If you're closely adhering to the original **CSS** / **SCSS** BEM class structure, only hard coding some classes in your copied template, you should be safe.
+</Admonition>
+
+Learn more about what we mean by technical debt here on the [overview page of this section](#) TODO link to technical debt section on parent page.
 
 ## Examples
 
 ### Customize `Headline` component
+
+In [this example component guide](../examples/components/headline.mdx) we adapt the `Headline` component (as part of the `@kickstartDS/base` module) to use it for headlines in our own Design System.. We greatly simplify the `Headline` and add both our own `switchOrder` property and RTE-like rendering capabilities for text content.
+
+This is what the result looks like (TODO replace with preview from real Storybook, not ours):
+
+<iframe
+  src="https://60dc476b80673e003b4258d6-czyzkgbgek.chromatic.com/iframe.html?args=&id=base-headline--subheadline&viewMode=story"
+  width="500"
+  height="150"
+></iframe>
 ```
