--- a/packages/tools/docusaurus/docs/guides/components/customize.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/customize.mdx
@@ -12,11 +12,22 @@ Customizing a component should be part of your arsenal if you already have a spe
 
 It involves the same rough steps as [adapting a component](./adapt.mdx), but differs from it when it comes to creating the **React** template. Instead of (only) using the base component directly as imported, and just re-wiring properties, we customize the markup the base component uses to include our own behaviour. Everything else will basically be the same.
 
+<Admonition type="tip" title="Customizing vs Extending">
+  In both processes we add new features to a component, which results in it fitting one of the use cases we have in mind for our Design System.
+
+In the case of [customizing a component](./customize.mdx), we either change the way a property of an existing **kickstartDS** base component behaves, or we add a new property to it altogether. But it's always a change that results in customizing the **React** component template, too. For example: [adding a `switchOrder` property to the `Headline`](../examples/components/headline.mdx).
+
+When extending a component, we take one existing **kickstartDS** base component and compose it with other **kickstartDS** base components to gain new functionality. We don't change the **React** component template in the process. For example: [adding call-to-actions to our `Section`](../examples/components/section.mdx).
+
+Both processes can be combined in a component, if needed!
+
+</Admonition>
+
 Additionally this can of course also be used while [creating](./create.mdx) a component, (see our [`TeaserCard` component example](../examples/components/teaser-card.mdx) for that). Or be used while [extending](./extend.mdx) a component that expands on some **kickstartDS** base component (see our [`Section` component example](../examples/components/section.mdx) for that).
 
 ## Customization process
 
-As with the adaptation process, the big assumption here is that you already have a **kickstartDS** base component in mind. But unlike in that one, we have some requirement or feature in mind that is not covered by it. We _almost_ have a match.
+As with the adaptation process, the big assumption here is that you already have a **kickstartDS** base component in mind. But unlike in that one, we have some requirement or feature that is not covered by it. We _almost_ have a match. Additionally, the change required involves changing the component itself... not adding other **kickstartDS** base components into the mix. That would be covered by the [extension process](./extend.mdx), instead.
 
 Finding your component definition is still very simplified, we just have to add those properties not covered by the base component into the mix ourselves.
 
@@ -27,7 +38,7 @@ This guide expects you to reduce the set of props offered by **kickstartDS** com
 
 </Admonition>
 
-If you don't have **kickstartDS** base component in mind yet, you're probably better served by our guide ["Create a component"](./create.mdx). In that guide, you'll start off without a specific component in mind. This means defining a structure (someting you probably have an idea about already) first, and then mapping that structure to a fitting component second.
+If you don't have a **kickstartDS** base component in mind yet, you're probably better served by our guide ["Create a component"](./create.mdx). In that guide, you'll start off without a specific component in mind. This means defining a structure (someting you probably have an idea about already) first, and then mapping that structure to a fitting component second.
 
 We also have an example for this with ["Create `Teaser Card` component"](../examples/components/teaser-card.mdx).
 
@@ -54,7 +65,7 @@ As our additional requirement, we'll want to be able to switch the order of the 
 
 There's not a lot different here when compared to the [adaptation process](./adapt.mdx). We just mainly keep close to the original purpose of our chosen **kickstartDS** base component.
 
-There should be an exception though, as we have a requirement on mind that is not part of the component yet. This will probably be part of the purpose of our component.
+There should be an exception though, as we have a requirement on our mind that is not part of the component yet. This will probably be part of the purpose of our component.
 
 For our `Headline` example, this could mean adding more flexibility being that requirement. We might want our component to fit more use cases, by switching said order in specific circumstances, and allowing additional code formatting for its content.
 
@@ -78,7 +89,7 @@ Let's keep going with our `Headline` component as an example. We're starting wit
 Fields that should be required are marked with a `*`.
 
 For the detailed documentation have a look at the `Headline` in our **Storybook** here:<br/>
-https://www.kickstartds.com/storybook/?path=/story/base-headline--h-1
+https://www.kickstartds.com/storybook/?path=/docs/base-headline--h-1
 
 One potential set of props, it's also the one used in our guide ["Customize `Headline` component"](../examples/components/headline.mdx) if you're wondering, would be the following:
 
@@ -101,7 +112,7 @@ In the second and final step we'll get to actually create our component. We'll e
 
 We establish the structure of components by creating a **JSON Schema** for them, defining their [component API](../../foundations/components/component-api.md) in code. This time we add our own, new property into the mix.
 
-For an abridged version of that process, have a look at the `Headline` again (adding our own `switchOrder`):
+For an abridged version of that process, have a look at the `Headline` again (adding our own `switchOrder` property):
 
 <CH.Spotlight>
 <CH.Code>
@@ -202,13 +213,12 @@ Subsequently we add exactly those fields to our own components [component API](.
   "description": "Component used for headlines",
   "type": "object",
   "properties": {
-    "text": { ... },
-    "sub": { ... },
+    "content": { ... },
+    "subheadline": { ... },
     "level": { ... },
-    "style": { ... },
+    "styleAs": { ... },
     "spaceAfter": { ... }
-  },
-  "required": ["level", "text"]
+  }
 }
 ```
 
@@ -255,8 +265,7 @@ Subsequently we add exactly those fields to our own components [component API](.
     "level": { ... },
     "style": { ... },
     "spaceAfter": { ... }
-  },
-  "required": ["level", "text"]
+  }
 }
 ```
 
@@ -304,8 +313,7 @@ Most importantly, we add our new property.
     "level": { ... },
     "style": { ... },
     "spaceAfter": { ... }
-  },
-  "required": ["level", "text"]
+  }
 }
 ```
 
@@ -380,18 +388,67 @@ And finally, set all the fields identified as `required`.
 ```
 
 </CH.Code>
+
+---
+
+#### Finished component **JSON Schema**
+
+The finished component definition in all its glory.
+
+<CH.Code>
+```json src/components/headline/headline.schema.json
+{
+  "$schema": "http://json-schema.org/draft-07/schema#",
+  "$id": "http://schema.mydesignsystem.com/headline.schema.json",
+  "title": "Headline",
+  "description": "Component used for headlines",
+  "type": "object",
+  "properties": {
+    "text": { ... },
+    "sub": { ... },
+    "switchOrder": { ... },
+    "level": { ... },
+    "style": { ... },
+    "spaceAfter": { ... }
+  },
+  "required": ["level", "text"]
+}
+```
+
+```json @kickstartds/headline.schema.json
+{
+  "$schema": "http://json-schema.org/draft-07/schema#",
+  "$id": "http://schema.kickstartds.com/base/headline.schema.json",
+  "title": "Headline",
+  "description": "Headline",
+  "type": "object",
+  "properties": {
+    "level": { ... },
+    "styleAs": { ... },
+    "align": { ... },
+    "content": { ... },
+    "subheadline": { ... },
+    "spaceAfter": { ... },
+    "className": { ... },
+    "component": { ... }
+  },
+  "required": ["content"]
+}
+```
+
+</CH.Code>
 </CH.Spotlight>
 
 <Admonition type="tip" title="Customizing multiple properties">
   This process can also involve customizing a component by adding multiple properties to it. Just repeat all the steps for every property you'll need to add.
 
-In genera: these guides are mainly meant as basic building blocks, that can be combined and remixed by you to create exactly what you need... even if that's something more complex as described in these basic guides here.
+In general: these guides are mainly meant as basic building blocks, that can be combined and remixed by you to create exactly what you need... even if that's something more complex than described in these basic guides here.
 
 </Admonition>
 
-For the full version of customizing a `Headline` have a look at our guide ["Customize `Headline` component"](../examples/components/headline.mdx).
+For the full version of customizing a `Headline` have a look at our ["Customize `Headline` component"](../examples/components/headline.mdx) guide.
 
-#### **React** Template
+#### **React** template
 
 Now that our **JSON Schema** is defined, we'll automatically get matching **TypeScript** types for our component. We use those, combined with the types already included with the **kickstartDS** base component, to quickly hook up our set of properties to the original component. Using auto-complete, and **TypeScript** telling us about required properties in the base component, this is gets easy like squeezing a lemon!
 
@@ -1330,9 +1387,11 @@ Learn more about what we mean by technical debt here on the [overview page of th
 
 ## Examples
 
+We continuously expand our [component example guides](../examples/components/index.md), below we've collected the ones acting as a good sample of the adaptation process.
+
 ### Customize `Headline` component
 
-In [this example component guide](../examples/components/headline.mdx) we adapt the `Headline` component (as part of the `@kickstartDS/base` module) to use it for headlines in our own Design System.. We greatly simplify the `Headline` and add both our own `switchOrder` property and RTE-like rendering capabilities for text content.
+In [this example component guide](../examples/components/headline.mdx) we customize the `Headline` component (as part of the `@kickstartDS/base` module) to use it for headlines in our own Design System. We greatly simplify the `Headline` and add both our own `switchOrder` property and RTE-like rendering capabilities for text content.
 
 This is what the result looks like (TODO replace with preview from real Storybook, not ours):
 
