docs(guides): add overview page to general component guides

--- a/packages/tools/docusaurus/docs/guides/components/adapt.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/adapt.mdx
@@ -7,7 +7,7 @@ import { Quote } from '@kickstartds/content/lib/quote';
 
 # Adapt a component
 
-## Definition
+## Overview
 
 Adapting a component means to use the component "directly". This includes using the same name and purpose for it. The obvious example would be using the `Button` provided by **kickstartDS** for the `Button` as part of your own Design System. It typically doesn't make a lot of sense to find a different name for this component, because the name is fitting and well-known.
 
@@ -28,6 +28,8 @@ This means reducing the set of properties, given by the [component API](../../fo
 For a detailed example of adapting the `Button` component, have a look [at our component example](../examples/components/button.mdx) guide describing just that!
 
 </Admonition>
+
+To learn more about the different processes available to you when creating a component with **kickstartDS**, have a look at the [overview page of this section](./index.mdx).
 
 ## Adaptation process
 
