--- a/packages/tools/docusaurus/docs/guides/components/create.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/create.mdx
@@ -6,7 +6,7 @@ import Admonition from 'react-admonitions';
 
 # Create a component
 
-## Definition
+## Overview
 
 Creating a component differs from "just" adapting a component in that it starts out without a specific **kickstartDS** component already in mind.
 
@@ -27,6 +27,8 @@ Adhering to that expectation, and not creating unneeded artificial friction, is 
 </Admonition>
 
 Additionally this can of course also be combined with [customization](./customize.mdx) for your own added properties, not part of the used **kickstartDS** base components (see our [`Headline` component example](../examples/components/headline.mdx) for that). Or be implemented using [extension](./extend.mdx) if the component should expand on some **kickstartDS** base component (see our [`Section` component example](../examples/components/section.mdx) for that).
+
+To learn more about the different processes available to you when creating a component with **kickstartDS**, have a look at the [overview page of this section](./index.mdx).
 
 ## Creation process
 
