--- a/packages/tools/docusaurus/docs/guides/components/extend.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/extend.mdx
@@ -6,7 +6,7 @@ import Admonition from 'react-admonitions';
 
 # Extend a component
 
-## Definition
+## Overview
 
 Extending a component takes a **kickstartDS** component and expands upon its abilities. But in contrast to [customizing a component](./customize.mdx) we don't just add a property, often resulting in changing the markup / template of the involved component in the process. When extending, we add new capabilities to a component by composing it with other components.
 
@@ -24,6 +24,8 @@ Both processes can be combined in a component, if needed!
 </Admonition>
 
 This can also be part of [creating](./create.mdx) a component, (see our [`TeaserCard` component example](../examples/components/teaser-card.mdx) for that). Or be used while [customizing](./customize.mdx) a component that expands on some **kickstartDS** base component (see our [`Section` component example](../examples/components/section.mdx) for that).
+
+To learn more about the different processes available to you when creating a component with **kickstartDS**, have a look at the [overview page of this section](./index.mdx).
 
 ## Extension process
 
