--- a/packages/tools/docusaurus/docs/guides/components/customize.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/customize.mdx
@@ -6,7 +6,7 @@ import Admonition from 'react-admonitions';
 
 # Customize a component
 
-## Definition
+## Overview
 
 Customizing a component should be part of your arsenal if you already have a specific **kickstartDS** component in mind, but it's missing a certain feature that you require. Instead of starting from zero, you can always just customize existing base components for your own purposes.
 
@@ -24,6 +24,8 @@ Both processes can be combined in a component, if needed!
 </Admonition>
 
 Additionally this can of course also be used while [creating](./create.mdx) a component, (see our [`TeaserCard` component example](../examples/components/teaser-card.mdx) for that). Or be used while [extending](./extend.mdx) a component that expands on some **kickstartDS** base component (see our [`Section` component example](../examples/components/section.mdx) for that).
+
+To learn more about the different processes available to you when creating a component with **kickstartDS**, have a look at the [overview page of this section](./index.mdx).
 
 ## Customization process
 
