docs(guides): mostly finish example component guides

--- a/packages/tools/docusaurus/docs/guides/components/customize.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/customize.mdx
@@ -104,7 +104,7 @@ One potential set of props, it's also the one used in our guide ["Customize `Hea
 | `style`       | `enum`    | Style of headline to show                |
 | `spaceAfter`  | `enum`    | Whether to display space after headline  |
 
-We took `level` and `spaceAfter` directly, renamed `subheadline` to `sub`, `styleAs` to `style` and `content` to `text` for our version of the `Headline`. And crucially we add our own property `switchOrder` into the mix. Required fields are marked with a `*` again.
+We took `level` and `spaceAfter` directly, and renamed `subheadline` to `sub`, `styleAs` to `style` and `content` to `text` for our version of the `Headline`. And crucially we add our own property `switchOrder` into the mix. Required fields are marked with a `*` again.
 
 ### 2. Component Creation
 
