docs(index pages): add content navigation

--- a/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
@@ -253,11 +253,11 @@ TODO: update gutter Token in KickstartDS
     </Section>
 
   </CH.Preview>
-
 <CollapsibleBox
   summary="Toggle Code"
   className="collapsible-code"
 >
+  <div>
   <CH.Code rows={30}>
 
 ```jsx
@@ -337,8 +337,8 @@ TODO: update gutter Token in KickstartDS
 ```
 
 </CH.Code >
+</div>
 </CollapsibleBox>
-
 </div>
 
 ### Grid
