docs(content-nav): add href to contentn nav

--- a/packages/tools/docusaurus/docs/foundations/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/index.mdx
@@ -15,7 +15,7 @@ Foundations are the visual elements needed to create your Design System and its 
       topic="Token"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './token/',
         label: 'Go to Token',
         variant: 'clear',
         size: 'small',
@@ -28,7 +28,7 @@ Foundations are the visual elements needed to create your Design System and its 
       topic="Components"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './components/',
         label: 'Explore Components',
         variant: 'clear',
         size: 'small',
@@ -41,7 +41,7 @@ Foundations are the visual elements needed to create your Design System and its 
       topic="Layout"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './layout/',
         label: 'Learn about Layouts',
         variant: 'clear',
         size: 'small',
@@ -54,7 +54,7 @@ Foundations are the visual elements needed to create your Design System and its 
       topic="Modules"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './modules/',
         label: 'Go to Modules',
         variant: 'clear',
         size: 'small',
