--- a/packages/tools/docusaurus/docs/guides/index.mdx
+++ b/packages/tools/docusaurus/docs/guides/index.mdx
@@ -13,8 +13,8 @@ import { Columns } from '@bedrock-layout/primitives';
       topic="Create your Design System"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
-        label: 'Go to Token',
+        href: './create/',
+        label: 'Go to DS',
         variant: 'clear',
         size: 'small',
         iconAfter: {
@@ -26,7 +26,7 @@ import { Columns } from '@bedrock-layout/primitives';
       topic="Components"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './components/',
         label: 'Explore Components',
         variant: 'clear',
         size: 'small',
@@ -39,7 +39,7 @@ import { Columns } from '@bedrock-layout/primitives';
       topic="Examples"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './examples/',
         label: 'Learn about Layouts',
         variant: 'clear',
         size: 'small',
@@ -52,7 +52,7 @@ import { Columns } from '@bedrock-layout/primitives';
       topic="Migrations"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './migrations/',
         label: 'Go to Modules',
         variant: 'clear',
         size: 'small',
@@ -65,7 +65,7 @@ import { Columns } from '@bedrock-layout/primitives';
       topic="Using our starter"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './use-our-starter/',
         label: 'Go to Modules',
         variant: 'clear',
         size: 'small',
@@ -79,7 +79,7 @@ import { Columns } from '@bedrock-layout/primitives';
       topic="Design System Initiative"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './design-system-initiative/',
         label: 'Go to Modules',
         variant: 'clear',
         size: 'small',
@@ -88,5 +88,6 @@ import { Columns } from '@bedrock-layout/primitives';
         },
       }}
     />
+
   </Columns>
 </div>
