--- a/packages/tools/docusaurus/docs/integration/index.mdx
+++ b/packages/tools/docusaurus/docs/integration/index.mdx
@@ -13,7 +13,7 @@ import { Columns } from '@bedrock-layout/primitives';
       topic="Storybook"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './storybook/',
         label: 'Go to Token',
         variant: 'clear',
         size: 'small',
@@ -26,7 +26,7 @@ import { Columns } from '@bedrock-layout/primitives';
       topic="React"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './react/',
         label: 'Learn about React',
         variant: 'clear',
         size: 'small',
@@ -39,7 +39,7 @@ import { Columns } from '@bedrock-layout/primitives';
       topic="Frameworks"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
       link={{
-        href: '#',
+        href: './frameworks/',
         label: 'Explore Frameworks',
         variant: 'clear',
         size: 'small',
